--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,10 +14,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
-    "vite": "^5.1.0"
+    "vite": "^7.1.12"
   }
 }
